[DATAVIC-911] fix an issue where resource form not showing error messages
* [DATAVIC-911] updated schema, its validation and theming

* [DATAVIC-911] fix an issue where resource form not showing error messages

* [DATAVIC-936] renamed the reorder resource tab

* [DATAVIC-911] updated the styling, removed unused code,

--- a/ckanext/datavic_odp_theme/grunt/sass/_form.scss
+++ b/ckanext/datavic_odp_theme/grunt/sass/_form.scss
@@ -140,3 +140,11 @@ select.form-control {
         }
     }
 }
+
+input[data-module="datavic-slug-visible"] {
+    flex: 1;
+}
+
+.input-group .error-block {
+    flex-basis: 100%;
+}
